[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pin-snippet-manager"
version = "0.1.0"
description = "Basic shell snippet manager"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

authors = [
    { name = "Kaio", email = "kaio.teixeira@proton.me" }
]

keywords = ["cli", "shell", "snippets", "productivity"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License"
]

dependencies = [
    "platformdirs>=4.0"
]

[project.urls]
repository = "https://github.com/Pixayo/pin"

[project.scripts]
pin = "pin-snippet-manager.cli:main"